# python-sketches

./: README.md  setup.cfg  setup.py  test-requirements.txt  tox.ini
sketch/collection_utils/: __init__.py
sketch/collection_utils/test/: test_collection_utils.py  test_keys_paths_finding.py
