[metadata]
name = sketch
summary = Python sketches
description-file =
    README.md
author = Alexander Kislitsky
author-email = sand8080@gmail.com
classifier =
    Environment :: Console
    Development Status :: 3
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    sketch
